Fixed position of contact form result toast on mobile screen

--- a/src/components/contactForm/contactForm.scss
+++ b/src/components/contactForm/contactForm.scss
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    position: relative;
+    z-index: 5;
     .form-control {
       margin-bottom: 15px;
     }
@@ -12,6 +14,11 @@
     }
     .button-primary {
       width: 100%;
+    }
+
+    .toast-container {
+      position: absolute;
+      align-self: center;
     }
   }
 }
