--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -5,6 +5,22 @@
   border-bottom: 3px solid;
   height: 50%;
   @media screen and (min-width: 768px) {
-    height: 100%;
+    height: 90vh;
+  }
+}
+
+.intro {
+  &-container {
+    @media screen and (min-width: 768px) {
+      height: 90vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      h1 {
+        font-size: 4em;
+        font-weight: bold;
+      }
+    }
   }
 }
